force-app/main/default/objects/Rpl_Interview_Result__c/Rpl_Interview_Result__c.object-meta.xml
<CustomObject>
    <label>Interview Result</label>
    <nameField>
        <label>Recruitment Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>