force-app/main/default/objects/Rpl_Interview_Result__c/fields/Rpl_Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Drive_Name__c</fullName>
    <label>Drive Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>