force-app/main/default/objects/Rpl_Interview_Result__c/fields/Rpl_Offered_Salary__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Offered_Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Offered Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>