force-app/main/default/objects/Rpl_Interview_Result__c/fields/Rpl_Result__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offered</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
                <isActive>false</isActive>
                <label>Fail</label>
            </value>
            <value>
                <fullName>Pass</fullName>
                <isActive>false</isActive>
                <label>Pass</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>