force-app/main/default/objects/Rpl_Interview_Result__c/fields/Rpl_Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Rpl_Round_Number__c</fullName>
    <label>Round Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>