force-app/main/default/objects/Rpl_Interview_Result__c/fields/Rpl_SRN__c.field-meta.xml
<CustomField>
    <fullName>Rpl_SRN__c</fullName>
    <label>SRN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>