force-app/main/default/objects/Rpl_Interview_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rpl_SRN__c</columns>
    <columns>Rpl_Round_Number__c</columns>
    <columns>Rpl_Result__c</columns>
    <columns>Rpl_Drive_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>